tests/snapshots/test_edit__work_set_title.snap
---
source: tests/edit_tests/work_tests/fields.rs
expression: value
---
$ govctl work new Original Title
Created work item: gov/work/<DATE>-original-title.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work edit WI-<DATE>-001 title --set New Title
Set WI-<DATE>-001.title = New Title
exit: 0

$ govctl work list all
[
  {
    "id": "WI-<DATE>-001",
    "status": "queue",
    "title": "New Title"
  }
]
exit: 0
