tests/snapshots/test_edit__work_tick_cancel_acceptance_criteria.snap
---
source: tests/edit_tests/work_tests/acceptance.rs
expression: value
---
$ govctl work new Test Task
Created work item: gov/work/<DATE>-test-task.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work edit WI-<DATE>-001 acceptance_criteria --add add: Criterion 1
Added 'add: Criterion 1' to WI-<DATE>-001.acceptance_criteria
exit: 0

$ govctl work edit WI-<DATE>-001 acceptance_criteria[0] --tick cancelled
Marked 'Criterion 1' as cancelled
exit: 0

$ govctl work show WI-<DATE>-001
# Test Task

> **ID:** WI-<DATE>-001 | **Status:** queue

## Description

Describe the work to be done.
What is the goal? What are the acceptance criteria?

## Acceptance Criteria

- ~~added: Criterion 1~~
exit: 0
